# monorepo

./: .gitignore  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run.txt  tmp_align.py  tmp_keto_api.json  tmp_schema.json  tsconfig.base.json
apps/python/ableton_video_sync_server/: logging_config.py  pyproject.toml  server.py  video_gen.txt
apps/python/ableton_video_sync_server/music_video_generation/: __init__.py  export_matcher.py  ideen.txt  project_files.py
apps/python/ableton_video_sync_server/music_video_generation/ableton/: __init__.py  ableton_insert_recordings_to_db.py  ableton_recording.py  ableton_recording_session.py  ableton_timing_listeners.py  connection_service.py  record_main.py  recording_cue_preview.py  recording_manager.py  recording_runtime.py  recording_state.py  recordings_timeline_ui.py
apps/python/ableton_video_sync_server/music_video_generation/audio_video_sync/: audio_output_selection.py  cue_player.py  postprocess_recordings.py
apps/python/ableton_video_sync_server/music_video_generation/multi_video_generator/: __init__.py  act.py  auto_bar_cuts.py  cli.py  cut.py  ffmpeg_render.py  generate.py  helper.py  main.py  main_settings.py  media.py  model.py  pipeline.py  sync_cameras.py  sync_cues.py  sync_cuts_from_recordings.py  sync_grid.py  sync_metadata.py  sync_models.py  sync_renderer.py  sync_sequence.py  sync_types.py
apps/python/ableton_video_sync_server/music_video_generation/postprocessing/: align_service.py  audio_utils.py  config.py  cue_detection.py  main.py  models.py  mongo_writer.py  postprocess_service.py  primary_cue_service.py
apps/python/ableton_video_sync_server/music_video_generation/sound/: __init__.py  audio_output_selection.py  cue_output_service.py  cue_output_settings.json  cue_player.py
apps/python/ableton_video_sync_server/music_video_generation/video_effects/: zoom.py  zoom_ffmpeg.py
apps/python/ableton_video_sync_server/music_video_generation/video_ingest/: .video_ingest_state.json  adb_impl.py  auto_detect_phone.py  cli.py  config.py  fs_impl.py  ingest.py  ingest_connector.py  ingest_device_discovery_trait.py  ingest_device_trait.py  ingest_request_trait.py  models.py  sources.py  utils.py  video_ingest.py  video_ingest_state.json
apps/python/context_provider/: .gitignore  Todo.md  build.ps1  pyproject.toml
apps/python/context_provider/src/: __main__.py  copy_actions.py  file_tree.py  filters.py  ignore_patterns.json  ignore_patterns.py  pane_manager.py  panels.py  ui.py  utils.py
apps/python/core_server/: Dockerfile  pyproject.toml
apps/python/core_server/core_server/: __init__.py  _paths.py  config.py  main.py
scripts/: detect_ce_in_video.py  (+1 more)
(+119 files in other folders)
