[project]
name = "ideas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/python/*",
    "packages/python/*",
]

[tool.uv.sources]
context-provider = { workspace = true }
core-server = { workspace = true }
mongo-connector = { workspace = true }
db-core = { workspace = true }
entitlements = { workspace = true }
ideas-api = { workspace = true }
ideas-repo = { workspace = true }
permissions = { workspace = true }
settings-repo = { workspace = true }
