[project]
name = "ableton-video-sync-server"
version = "0.1.0"
description = "Standalone helper server for Ableton Video Sync ingest flows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "numpy>=2.3.5",
  "sounddevice>=0.5.3",
  "loguru>=0.7.3",
  "scipy>=1.16.3",
  "annotated-doc>=0.0.4",
  "cue-library>=0.1.0",
  "cue-player>=0.1.0",
  "cue-runtime>=0.1.0",
  "cue-detection>=0.1.0",
  "cue-detection-service>=0.1.0",
  "pymongo>=4.9.0",
  "tqdm>=4.67.1",
  "petname>=2.6",
  "mutagen>=1.47.0",
]

[project.scripts]
ableton-video-sync-server = "server:run"

[tool.uvicorn]
host = "127.0.0.1"
port = 5050
reload = false
