[project]
name = "context-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
    "pyside6>=6.8.0",
    "python-dotenv>=1.0.1",
]
